--- a/index.html
+++ b/index.html
@@ -1,33 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Simon Say</title>
-    
+
     <link rel="shortcut icon" href="img/simon.png" type="image/x-icon" />
 
-    <link rel="stylesheet" href="css/style.css">
-</head>
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
 
-<body>
+  <body>
     <div id="simon">
-        <div class="buttonContainer">
-            <div class="square" id="topleft"></div>
-            <div class="square" id="topright"></div>
-            <div class="square" id="bottomleft"></div>
-            <div class="square" id="bottomright"></div>
-        </div>
-        <div id="inner-circle">
-            <div class="title">Simon say</div>
-            <button id="startButton">Start</button>
-            <div id="round"></div>
-        </div>
+      <div class="buttonContainer">
+        <div class="square" id="topleft"></div>
+        <div class="square" id="topright"></div>
+        <div class="square" id="bottomleft"></div>
+        <div class="square" id="bottomright"></div>
+      </div>
+      <div id="inner-circle">
+        <div class="title">Simon say</div>
+        <button id="startButton">Start</button>
+        <div id="round"></div>
+      </div>
     </div>
 
+    <script src="https://www.jsdelivr.com/projects/howler.js"></script>
     <script src="js/app.js" defer></script>
-</body>
-
+  </body>
 </html>
